@@ -409,10 +409,10 @@ void CChildFrame::ActivateFrame(int nCmdShow)
 	int initialDiffHeight = ((CMergeDiffDetailView*)m_wndDetailSplitter.GetPane(1,0))->ComputeInitialHeight();
 	UpdateDiffDockbarHeight(initialDiffHeight);
 	// load docking positions and sizes
-	CDockState m_pDockState;
-	m_pDockState.LoadState(_T("Settings"));
-	if (EnsureValidDockState(m_pDockState)) // checks for valid so won't ASSERT
-		SetDockState(m_pDockState);
+	CDockState pDockState;
+	pDockState.LoadState(_T("Settings"));
+	if (EnsureValidDockState(pDockState)) // checks for valid so won't ASSERT
+		SetDockState(pDockState);
 	// for the dimensions of the diff and location pane, use the CSizingControlBar loader
 	m_wndLocationBar.LoadState(_T("Settings"));
 	m_wndDetailBar.LoadState(_T("Settings"));
